--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,9 +1,9 @@
 // Body
-$body-bg: #d5d6d6;
+$body-bg: #f8fafc;
 
 // Typography
-$font-family-sans-serif: 'Montserrat', sans-serif;
-$font-size-base: 1rem;
+$font-family-sans-serif: 'Nunito', sans-serif;
+$font-size-base: 0.9rem;
 $line-height-base: 1.6;
 
 // Colors
