--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -8,7 +8,7 @@
 @import '~bootstrap/scss/bootstrap';
 
 // Codemirror
-//@import '~codemirror/lib/codemirror.css';
+@import '~codemirror/lib/codemirror.css';
 
 // Fontawesome
 @import '~@fortawesome/fontawesome-free/css/all.min.css';
