--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -4,14 +4,25 @@
 // Variables
 @import 'variables';
 
-// Bootstrap
-@import '~bootstrap/scss/bootstrap';
+// Bootstrap + MDB
+@import '~mdbootstrap/css/bootstrap.min.css';
+@import '~mdbootstrap/css/mdb.min.css';
 
 // Codemirror
-@import '~codemirror/lib/codemirror.css';
+//@import '~codemirror/lib/codemirror.css';
 
 // Fontawesome
 @import '~@fortawesome/fontawesome-free/css/all.min.css';
+
+// General
+
+html, body, .view {
+    min-height: 100%;
+    position: static;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
 
 // Navbar css
 
